@@ -14,7 +14,7 @@ Forwarded: https://gitlab.gnome.org/GNOME/gnome-shell/merge_requests/4
  1 file changed, 7 insertions(+), 6 deletions(-)
 
 diff --git a/js/ui/workspaceThumbnail.js b/js/ui/workspaceThumbnail.js
-index 381169e..5e593cc 100644
+index 68922c9..9db0651 100644
 --- a/js/ui/workspaceThumbnail.js
 +++ b/js/ui/workspaceThumbnail.js
 @@ -70,12 +70,7 @@ var WindowClone = new Lang.Class({
