@@ -16,6 +16,7 @@ gnome-shell (3.29.4-1) UNRELEASED; urgency=medium
     + Fix lagging pointer when zoomed
     + Support icons in app-menu
   * Install new systemd user units (aren't used by anything just yet)
+  * Refresh patches
 
  -- Iain Lane <laney@debian.org>  Wed, 25 Jul 2018 15:49:18 +0100
 
